--- a/static/style/main.css
+++ b/static/style/main.css
@@ -11,5 +11,18 @@ div, header, main, footer {
 }
 main>* {
 	width: 80%;
-	margin: auto;
+	margin: 2em auto;
+}
+
+header{
+	background-color: lavenderblush;
+	border-top: 2px solid purple;
+	box-shadow: 0px -3px 10px 0px black;
+}
+header h1{
+	margin: 0;
+}
+footer{
+	background-color: lavenderblush;
+	box-shadow: 0px 3px 10px 0px black;
 }
