--- a/static/style/main.css
+++ b/static/style/main.css
@@ -4,14 +4,18 @@
 body {
 	padding: 0;
 	margin: 0;
+	background-color: ghostwhite;
 }
 div, header, main, footer {
 	padding: 0;
 	margin: 0;
 }
 main>* {
-	width: 80%;
+	width: 90%;
 	margin: 2em auto;
+	box-shadow: 1px 4px 16px -7px black;
+	border-radius: 0.5em;
+	background-color: white;
 }
 
 header{
