--- a/static/component/socket-graph-data.css
+++ b/static/component/socket-graph-data.css
@@ -1,14 +1,18 @@
 :host{
 	display: block;
+	padding: 1em;
 }
 socket-graph-data-inner {
 	display: block;
 	overflow: hidden;
 	resize: both;
-	border: 1px solid gray;
-	height: 300px;
+	height: 400px;
 	width: 100%;
 }
 socket-graph-data-inner canvas {
 	cursor: move;
+	border: 1px solid gray;
+}
+socket-graph-data-inner label{
+	display: block;
 }
