--- a/static/style/main.css
+++ b/static/style/main.css
@@ -5,6 +5,9 @@ body {
 	padding: 0;
 	margin: 0;
 	background-color: ghostwhite;
+	min-height: 100vh;
+	position: relative;
+	padding-bottom: 100px;
 }
 div, header, main, footer {
 	padding: 0;
@@ -30,4 +33,15 @@ header h1{
 footer{
 	background-color: lavenderblush;
 	box-shadow: 0px 3px 10px 0px black;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	padding: 1em;
+}
+footer h3{
+	margin: 0;
+}
+a{
+	color: mediumblue;
 }
