--- a/static/style/main.css
+++ b/static/style/main.css
@@ -28,6 +28,7 @@ header{
 }
 header h1{
 	margin: 0;
+	margin-left: 0.5em;
 	font-weight: normal;
 }
 footer{
@@ -37,10 +38,14 @@ footer{
 	bottom: 0;
 	left: 0;
 	width: 100%;
-	padding: 1em;
+	padding: 0.25em 1em;
 }
 footer h3{
 	margin: 0;
+}
+footer li{
+	padding-top: 0.1em;
+	padding-bottom: 0.1em;
 }
 a{
 	color: mediumblue;
